tests/NormalTests/paczka1/fuzzy1/64247615.err
Error in line 6: MX0fEGa3qa4 S438 47,3
Error in line 12: SnKMPSu S438 3,7
Error in line 16: S62A A482 75,5
Error in line 25: w0Iq2U A150 35,7
Error in line 39: Tf2îA482î31,0
